--- a/frontend/js-module/index.html
+++ b/frontend/js-module/index.html
@@ -7,9 +7,9 @@
         <script src="dojo/dojo.js"></script>
         <script src="dijit/dijit.js"></script>
 
-        <div data-dojo-type="views/ViewA_hash_.js"></div>
-        <div data-dojo-type="views/ViewB_hash_.js"></div>
-        <div data-dojo-type="views/ViewC_hash_.js"></div>
+        <div data-dojo-type="views/PersonalView.js"></div>
+        <div data-dojo-type="views/EmployeeView.js"></div>
+        <div data-dojo-type="views/StudentView.js"></div>
 
         <script>
             require(["dojo/parser", "dojo/domReady!"], parser => {
